# Ucode-marathon-Cpp

./: .gitignore
Sprint00/t00/: helloTamriel.cpp
Sprint00/t01/: printDialog.cpp  printDialog.h
Sprint00/t02/: CMakeLists.txt  main.cpp  walletManager.cpp  walletManager.h
Sprint00/t03/: castSpells.cpp  castSpells.h
Sprint00/t04/: referenceOrPointer.cpp
Sprint00/t05/: CMakeLists.txt  main.cpp
Sprint00/t06/: CMakeLists.txt  main.cpp  meadSong.cpp  meadSong.h
Sprint00/t07/: CMakeLists.txt  main.cpp
Sprint00/t07/src/: inventor.h  inventory.cpp
Sprint01/t00/: CMakeLists.txt  main.cpp
Sprint01/t00/src/: CMakeLists.txt  simpleSort.cpp  simpleSort.h
Sprint01/t01/: CMakeLists.txt  main.cpp
Sprint01/t01/src/: CMakeLists.txt  moveAlong.cpp  moveAlong.h
Sprint01/t02/: CMakeLists.txt  main.cpp
Sprint01/t02/src/: CMakeLists.txt  visitAll.cpp  visitAll.h
Sprint01/t03/: CMakeLists.txt  main.cpp
Sprint01/t03/src/: CMakelists.txt  rabbitsAmount.cpp  rabbitsCreation.cpp  vampireRabbits.cpp  vampireRabbits.h
Sprint01/t04/: CMakeLists.txt  main.cpp
Sprint01/t04/src/: CMakelists.txt  list_size.cpp  stdAlgoV1.cpp  stdAlgoV1.h
Sprint01/t05/: CMakeLists.txt  main.cpp
Sprint01/t05/src/: CMakeLists.txt  stdAlgoV2.cpp  stdAlgoV2.h
Sprint02/: .gitignore
Sprint02/t00/: CMakeLists.txt  main.cpp
Sprint02/t00/src/: CMakeLists.txt  uniqueWords.cpp  uniqueWords.h
Sprint02/t01/: CMakeLists.txt  main.cpp
Sprint02/t01/src/: CMakeLists.txt  countUniqueWords.cpp  countUniqueWords.h
Sprint02/t02/: CMakeLists.txt  main.cpp
Sprint02/t02/src/: CMakeLists.txt  bookSaver.cpp  bookSaver.h
Sprint02/t03/src/: CMakeLists.txt  main.cpp  tesLibrary.cpp  tesLibrary.h
Sprint03/: .gitignore
Sprint03/t00/: templateAddition.h
Sprint03/t04/: outputContainer.h
Sprint03/t06/: isPalindrome.h
Sprint03/t07/: sortValues.h
Sprint03/t07/t01/: outputAny.h
Sprint03/t07/t02/: sumOfArguments.h
Sprint03/t07/t03/: sumFileData.h
Sprint03/t07/t05/: squareValue.h
Sprint04/: .gitignore
Sprint04/t00/utils/: CMakeLists.txt  algorithmUtils.h  main.cpp
Sprint04/t01/app/: CMakeLists.txt  main.cpp
Sprint04/t01/app/src/: Axe.cpp  CMakeLists.txt  ImperialSoldier.cpp  ImperialSoldier.h  StormcloakSoldier.cpp  StormcloakSoldier.h  Sword.cpp  Sword.h
Sprint04/t02/app/: CMakeLists.txt  main.cpp
Sprint04/t02/app/src/: CMakeLists.txt  dragonborn.cpp  dragonborn.h
Sprint05/t00/app/: main.cpp
Sprint05/t01/app/: main.cpp
Sprint05/t02/app/: main.cpp
Sprint05/t03/app/: CMakeLists.txt  main.cpp
Sprint05/t04/: CMakeLists.txt
Sprint05/t04/app/: main.cpp
Sprint05/t05/app/: CMakeLists.txt  main.cpp
Sprint05/t05/app/src/: CMakeLists.txt  Werewolf.cpp  Werewolf.h
Sprint06/t01/: CMakeLists.txt
Sprint06/t01/app/: CMakeLists.txt  main.cpp
Sprint07/t00/app/: CMakeLists.txt  main.cpp
Sprint08/t00/: CMakeLists.txt
Sprint08/t00/app/: CMakeLists.txt  main.cpp
Sprint08/t00/app/src/: CMakeLists.txt  Map.h  MoveManag.h  Player.h  smartPointers.cpp
Sprint08/t01/: CMakeLists.txt
Sprint08/t01/app/: CMakeLists.txt  main.cpp
Sprint08/t02/: CMakeLists.txt
Sprint08/t02/app/: CMakeLists.txt  main.cpp
Sprint08/t02/app/src/: universalReferenceDeterminant.h
Sprint08/t03/: CMakeLists.txt
Sprint08/t03/app/: CMakeLists.txt  main.cpp
Sprint09/t00/: CMakeLists.txt
Sprint09/t00/app/: CMakeLists.txt  main.cpp
Sprint09/t02/: CMakeLists.txt
(+40 files in other folders)
